# uqlab

./: .gitignore  MANIFEST.in  PACKAGING_GUIDE.md  README.md  SPEC_KIT_SETUP.md  __init__.py  experiment_config_flat.py  experiment_discovery.py  pyproject.toml  results_io.py  run_artifacts.py  runtime_paths.py
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: bob.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
1_data/: __init__.py
2_models/: README.md  feature_extractors.py
4_evaluation/signals/: __init__.py  attribution.py
5_api/: datasets.py
5_api/integrations/: watsonx.py
api/: README.md  datasets.py
api/integrations/: watsonx.py
benchmarks/: __init__.py
classification/: attribution_signals.py  config.py  data_loader.py  evaluation.py  feature_extractor.py  hydra_wrapper.py  model_factory.py  models.py  signal_formula_specs.py  utils.py
data/: README.md  __init__.py  benchmark_axes.py  class_regions.py  classification_dataset.py  dataset_registry.py  experiment_loader.py  image_dataset.py  loaders.py  packs.py  preprocessing.py  setup.py
data/loaders/: __init__.py  cifar10_loader.py  cifar10n_loader.py  fashion_mnist_loader.py  mnist_loader.py
evaluation/: README.md  __init__.py  artifacts.py  evaluator.py  four_region_validation.py  metrics.py  result_writers.py
evaluation/benchmarks/: README.md  __init__.py
evaluation/classification/: MERGE_NOTES.md  __init__.py  attribution_signals.py  data_loader.py  evaluation.py  feature_extractor.py  hydra_wrapper.py  model_factory.py  models.py  signal_formula_specs.py  watsonx_streamlit.py
facade/: README.md  __init__.py  backend_experiment_facade.py  experiment_facade.py
legacy_experiments/: __init__.py  risk_coverage_report.py
legacy_metrics/: __init__.py  acquisition_functions.py  uncertainty_suite.py
models/: README.md  architecture.py  classification_models.py  factory.py  feature_extractors.py  mc_dropout.py  training.py  training_scope.py
notebook_support/: __init__.py  method_comparison_plotly.py  metric_specs.py  signals.py
runner/: README.md  __init__.py  console_log.py  execute.py  experiment_core.py  experiment_log.py  notebook_run.py  patterns.py  pipeline.py  train_eval.py
shared/: __init__.py  types.py
ui_components/: 6_UI_MIGRATION_ANALYSIS.md  6_UI_TO_LEGACY_MIGRATION_PLAN.md  README.md  UI_COMPONENTS_COMPREHENSIVE_ANALYSIS.md  UI_COMPONENTS_MIGRATION_COMPLETE.md  UI_COMPONENTS_MIGRATION_STATUS.md  UI_COMPONENTS_REORGANIZATION_COMPLETE.md  __init__.py  style.py  ui_debug.py  utils.py
(+155 files in other folders)
