[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uqlab"
version = "0.1.0"
description = "Uncertainty Quantification Lab - ML models with epistemic and aleatoric uncertainty estimation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "UQLab Team", email = "contact@example.com"}
]
keywords = ["machine-learning", "uncertainty-quantification", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.33.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "pylint>=2.17.0",
]
ek_fak = [
    "kronfluence>=0.1.0",
]
all = [
    "uqlab[ui,dev,ek_fak]",
]

[project.urls]
Homepage = "https://github.com/gigibot-tech/uqlab"
Repository = "https://github.com/gigibot-tech/uqlab"
Issues = "https://github.com/gigibot-tech/uqlab/issues"

[tool.setuptools.package-dir]
"uqlab" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["uqlab*"]
exclude = ["tests*", "docs*", "*.egg-info", "build", "dist"]

[tool.setuptools.package-data]
uqlab = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=uqlab --cov-report=html --cov-report=term-missing"